--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
     <meta itemprop="description" content="" />
     <meta property="og:description" content="" />
     <meta name="twitter:description" content="" />
-    <base href="https://example.com/">
-    <link rel="canonical" href="https://example.com/" itemprop="url" /> 
-    <meta name="url" content="https://example.com/" />
-    <meta name="twitter:url" content="https://example.com/" /> 
-    <meta property="og:url" content="https://example.com/" />
+    <base href="https://flmann.github.io/">
+    <link rel="canonical" href="https://flmann.github.io/" itemprop="url" /> 
+    <meta name="url" content="https://flmann.github.io/" />
+    <meta name="twitter:url" content="https://flmann.github.io/" /> 
+    <meta property="og:url" content="https://flmann.github.io/" />
     
-     <link rel="stylesheet" href="https://example.com/css/sourgough.css"> 
+     <link rel="stylesheet" href="https://flmann.github.io/css/sourgough.css"> 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
